# inventory-embeddings

./: .gitignore  .pre-commit-config.yaml  README.md  filter_tno_data.py  main.py  pre_process_data.py  pyproject.toml
embeddings/common/: constants.py  gnfr_sector.py  gnfr_sector_type.py  log.py  paths.py
embeddings/data_preprocessing/: city_filtering.py  filter_tno_data_by_cities.py  helper_dataclasses.py  preprocess_tno.py  tno_constants.py  tno_preprocessor.py
embeddings/data_preprocessing/data_classes/: cell.py  city.py  ghg_source.py
embeddings/dataset/: city_emission_field.py  city_emission_grid.py  dataset_merge.py  dataset_operations.py  dataset_split.py  tno_dataset.py  tno_dataset_collection.py
embeddings/dataset/emission_field_transforms/: __init__.py  _crop_transform.py  _emission_field_transform.py  _flip_transform.py  _random_sparse_emitters_transform.py  _rotation_transform.py  _temporal_transform.py  _temporal_transforms.py
embeddings/evaluation/: compressed_sensing.py  compressed_sensing_experiment.py  evaluate.py  evaluation.py  latent_dimension.py  plot_inverse_problem_reconstruction.py
embeddings/evaluation/inverse_problems_solver/: __init__.py  _dct_lasso_solver.py  _dwt_lasso_solver.py  _generative_model_solver.py  _inverse_problem_solver.py  _lasso_solver.py
embeddings/inverse_problems/: compressed_sensing_experiment.py  compressed_sensing_problem.py  evaluate.py  inverse_problem.py
embeddings/inverse_problems/footprints/: footprint_loader.py  gaussian_plume_model.py
embeddings/inverse_problems/inverse_problems_solver/: __init__.py  _bp_solver.py  _dct_lasso_solver.py  _dwt_lasso_solver.py  _generative_model_solver.py  _inverse_problem_solver.py  _lasso_solver.py
embeddings/inverse_problems/inverse_problems_solver/_sparsity_transforms/: _dct_transform.py  _dwt_transform.py  _transforms.py
embeddings/models/: device.py
embeddings/models/common/: layers.py  metrics.py
embeddings/models/vae/: finetune.py  loss.py  train.py  vae.py  vae_trainer.py
embeddings/notebooks/: compressed_sensing.ipynb  compressed_sensing_gaussian_plume_simulation.ipynb  dataset_analysis.ipynb  plot_case_study_city_emissions.ipynb  plot_random_city_emissions.ipynb  plot_vae_generation.ipynb  plot_vae_reconstruction.ipynb
embeddings/plotting/: city_emission_field_plot.py  plot.py  plot_case_study_cities.py  plot_city.py  plot_evaluation.py  plot_inverse_problem_reconstruction.py  plot_random_city.py  plot_vae.py  plot_vae_generation.py  plot_vae_reconstruction.py
embeddings/scripts/: compute_mean_of_data.py  compute_mse_for_all_cities.py  gaussian_plume_model_final.py  mcmc.py
notebooks/: compare_with_benjis_code.ipynb  compressed_sensing.ipynb  compressed_sensing_gaussian_plume_simulation.ipynb  compressed_sensing_snr_plot.ipynb
notebooks/data_analysis/: analyze_point_sources.ipynb  dataset_analysis.ipynb
notebooks/evaluation/model_evaluation/: effect_of_latent_dimension.ipynb
notebooks/experiment_plots/: plot_experiments.ipynb
notebooks/experiments/: gaussian_plume_example.ipynb  plot_atmospheric_inversion_snr.ipynb  plot_experiments.ipynb  plot_gaussian_measurements_experiments.ipynb  plot_sector_wise_reconstruction.ipynb  plot_vae_benchmark.ipynb
notebooks/experiments/latent_dimension/: latent_dimension.ipynb  plot_latent_dimension.ipynb
notebooks/visualizations/: animate_footprints.ipynb  animate_range_of_generator.ipynb  plot_architecture_search.ipynb  plot_case_study_city_emissions.ipynb  plot_city_emissions.ipynb  plot_random_city_emissions.ipynb  plot_simulated_footprint.ipynb  plot_vae_generation.ipynb  plot_vae_reconstruction.ipynb
src/: constants.py  filter_cities.py  gnfr_sector_type.py  helper_dataclasses.py  paths.py
src/common/: csv_writer.py  log.py  paths.py
src/data_preprocessing/: city_filtering.py  preprocess_tno.py  tno_preprocessor.py
src/data_preprocessing/data_classes/: cell.py  ghg_source.py
src/data_set/convert/: cell.py  convert_data_set.py  gnfr_sector_type.py  sector.py
src/dataset/: city_emission_field.py  dataset_operations.py  tno_dataset.py  tno_dataset_collection.py
src/dataset/emission_field_transforms/: __init__.py  _crop_transform.py  _emission_field_transform.py  _flip_transform.py  _gaussian_noise_transform.py  _random_sparse_emitters_transform.py  _rotation_transform.py  _sector_uncertainty_transform.py  _temporal_transforms.py
src/evaluation/: evaluation.py  evaluation_runner.py  latent_dimension.py
src/experiments/: finetuned_models.py  gaussian_plume_different_snr.py  gen_models_no_noise.py  gen_models_snr_20_db.py  lasso_no_noise.py  lasso_snr_20_db.py
src/experiments/evaluation/: __init__.py  evaluation_data_reader.py  evaluation_runner.py
src/experiments/hyper_parameters/: __init__.py  _lambda_per_snr.py  _learning_rate_per_city.py
src/inverse_problems/: compressed_sensing_problem.py  inverse_problem.py
src/inverse_problems/footprints/: footprint_loader.py
src/inverse_problems/inverse_problems_solver/: __init__.py  _bp_solver.py  _generative_model_solver.py  _inverse_problem_solver.py  _lasso_solver.py  _learning_rates_generative_model_solver.py  _ls_solver.py  _optimize.py  _sparse_generative_model_solver.py
src/models/common/: metrics.py
src/models/vae/: finetune.py  train.py  vae.py
src/plotting/: city_emission_field_plot.py  plot_settings.py
(+3 files in other folders)
